# shade-rs

./: .gitignore  Cargo.toml
shade-rs-build/: Cargo.toml
shade-rs-build/src/: lib.rs
shade-rs-build/src/ui/: cargo.rs  git.rs  mod.rs  wasm_bindgen.rs
shade-rs-build/src/util/: json.rs  mod.rs  process.rs
shade-rs-build/templates/: embed.html  index.html
shade-rs-cli/: Cargo.toml
shade-rs-cli/src/: build.rs  main.rs  serve.rs
shade-rs-cli/src/util/: shutdown.rs
shade-rs-ui/: Cargo.toml
shade-rs-ui/src/: error.rs  main.rs
shade-rs-ui/src/app/: app.scss  code_mirror.rs  mod.rs  prelude.scss  shader.wgsl  window.rs  window.scss
shade-rs-ui/src/graphics/: backend.rs  mod.rs
shade-rs-ui/src/utils/: futures.rs  mod.rs  time.rs
