[package]
name = "shade-rs-build"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm-bindgen-lib = ["dep:wasm-bindgen-cli-support", "dep:walrus"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
walkdir = "2.5.0"
derive_more = { version = "1.0.0", features = ["display", "from", "from_str", "into"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.64"
tokio = { version = "1", features = ["macros", "sync", "process", "time"] }
wasm-bindgen-cli-support = { version = "=0.2.93", optional = true }
walrus = { version = "=0.21.1", features = ["parallel"], optional = true }
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
askama = "0.12.1"
