[package]
name = "shade-rs-cli"
version = "0.1.0"
edition = "2021"

[dependencies.shade-rs-build]
workspace = true

[dependencies]
axum = { version = "0.7", features = ["http2", "tracing", "ws"] }
color-eyre = "0.6.2"
clap = { version = "4.5.18", features = ["derive", "env", "cargo", "color"] }
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
url = "2.5.2"
palette = "0.7.6"
lazy_static = "1.5.0"
regex = "1.11.0"
itertools = "0.13.0"
indicatif = "0.17.8"
mime = "0.3.17"
