[package]
name = "shade-rs-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-utils = "0.2.0"
leptos = { version = "0.6", features = ["nightly", "csr"] }
thiserror = "1"
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }
wgpu = { version = "22.1.0", features = ["webgl", "serde", "naga-ir"] }
raw-window-handle = "0.6.2"
kardashev-style = { git = "https://github.com/jgraef/kardashev.git", rev = "a7b89b4e61c52af6e164471517ac0463edd45dbd" }
serde = { version = "1.0.210", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1.40.0", default-features = false, features = ["sync", "macros"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-time = "1.1.0"
naga = { version = "22.1.0", features = ["serialize", "deserialize"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
leptos-use = "0.13.5"
tracing-subscriber = "0.3.18"

[package.metadata.kardashev.style]
# Specify a directory to which to write the output CSS.
output = "target/css/shade-rs-ui"
crate_name = "shade-rs"
